--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <meta name="theme-color" content="#FF0092">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta property="og:title" content="Naruto Bot" />
-    <meta property="og:site_name" content="Website by: Kurasad#2521" />
+    <meta property="og:site_name" content="Website by: Myemilia#7913" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.2/css/all.min.css" rel="stylesheet" />
+     <link href="https://cdn.discordapp.com/attachments/739919960112889876/739935129665011842/20200803_210108.jpg" rel="icon" />
     <link rel="stylesheet" href="style.css">  
 </head>
 
