--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta property="og:title" content="Naruto Bot" />
     <meta property="og:site_name" content="Website by: Myemilia#7913" />
     <meta property="og:image" content="https://cdn.discordapp.com/attachments/739919960112889876/739935129665011842/20200803_210108.jpg" />
+    <meta property="og:description" content="Start with fun, learn jutsu, buy items and become one of the best ninja!" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.2/css/all.min.css" rel="stylesheet" />
      <link href="https://cdn.discordapp.com/attachments/739919960112889876/739935129665011842/20200803_210108.jpg" rel="icon" />
     <link rel="stylesheet" href="style.css">  
