--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
     <meta property="og:title" content="Naruto Bot" />
     <meta property="og:site_name" content="Website by: Myemilia#7913" />
     <meta property="og:description" content="Start with fun, learn jutsu, buy items and become one of the best ninja!" />
-    <meta property="og:image:type" content="https://cdn.discordapp.com/attachments/392267144316059650/740623380398735440/20200724_225751.jpg" />
-    <meta property="og:image:width" content="1280" />
-    <meta property="og:image:height" content="765" />
+    <meta property="og:image" content="https://cdn.discordapp.com/attachments/392267144316059650/740623380398735440/20200724_225751.jpg" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.2/css/all.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css">  
 </head>
