--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title> Naruto Bot </title>
     <meta charset="UTF-8" />
-    <meta name="theme-color" content="#FF0092">
+    <meta name="theme-color" content="#FFE901">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta property="og:title" content="Naruto Bot" />
     <meta property="og:site_name" content="Website by: Myemilia#7913" />
