--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <meta property="og:description" content="Start with fun, learn jutsu, buy items and become one of the best ninja!" />
     <meta property="og:image" content="https://cdn.discordapp.com/attachments/737719151631663116/747802909873275000/800x800_0xac120002_9465844721544093805.png" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.2/css/all.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="style.css">  
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="https://cdn.discordapp.com/attachments/737719151631663116/747807487540854874/20200808_130804.jpg">
 </head>
 
 <body>
