--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
 </head>
 
 <body>
+    <div id="loader-wrapper">
+    <div id="loader"></div>
+ 
+    <div class="loader-section section-left"></div>
+    <div class="loader-section section-right"></div>
+ 
+</div>
     <div id="background" class="vertical-centered-box"></div>
     <div id="particles" class="vertical-centered-box"></div>
     <div class="card">
