Updated title of index
Added 💪 emoji to the title of website

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="theme-color" content="#FFE901">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta property="og:title" content="Naruto Bot" />
+    <meta property="og:title" content="💪 Naruto Bot" />
     <meta property="og:site_name" content="Website by: Myemilia#7913" />
     <meta property="og:description" content="Start with fun, learn jutsu, buy items and become one of the best ninja!" />
     <meta property="og:image" content="https://cdn.discordapp.com/attachments/737719151631663116/747802909873275000/800x800_0xac120002_9465844721544093805.png" />
